TUI: rename Was/Is to Committed/Current, preselect uncommitted changes